--- a/template/package.json
+++ b/template/package.json
@@ -8,7 +8,7 @@
     "tsc": "tsc",
     "tsc-watch": "tsc -w",
     "build": "gulp build",
-    "start": "node build/index.js",
+    "start": "node build/src/index.js",
     "setup": "npm install",
     "watch": "nodemon --watch build/ build/index.js"
   },
