--- a/template/src/config/application.yml
+++ b/template/src/config/application.yml
@@ -1,18 +1,21 @@
 node-web:
+  app:
+    cors: true
+    assets: assets
+    port: <%= port %>
+    host: <%= host %>
+    viewDir: view
+    controllerDir: controller
   data:
-    #mongo: // one connection
-      # url: mongodb://localhost:27017
-      #auth:
-        #  user: ''
-        #  password: ''
+<%_ if (datasource.indexOf('mongo') >= 0) { _%>
     mongo:
       -
         dao: jweb-mongo
         bean: primary
         url: mongodb://localhost:27017
         poolSize: 10
-     #-
-        #url: mongodb://localhost:27017
+<%_ }; _%>
+<%_ if (datasource.indexOf('mysql') >= 0) { _%>
     mysql:
       -
         dao: jweb-mysql
@@ -21,10 +24,14 @@ node-web:
         port: 3306
         user: root
         password: ''
+        database: test
         connectionLimit: 10
+<%_ }; _%>
+<%_ if (datasource.indexOf('redis') >= 0) { _%>
     redis:
       -
         dao: jweb-redis
         bean: primary
         host: 127.0.0.1
         port: 6379
+<%_ }; _%>
