--- a/template/package.json
+++ b/template/package.json
@@ -10,7 +10,8 @@
     "build": "gulp build",
     "start": "node build/src/index.js",
     "dev": "cross-env NODE_ENV=development node build/src/index.js",
-    "cron": "node build/src/index.js -t hello -m 3 -s 2",
+    "server": "gulp server",
+    "server:build": "gulp server:build",
     "setup": "npm install",
     "watch": "nodemon --watch build/ build/index.js"
   },
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^10.x.x",
+    "browser-sync": "^2.26.3",
     "cross-env": "^5.2.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -33,9 +35,11 @@
     "gulp": "^4.0.0",
     "gulp-env": "^0.4.0",
     "gulp-mocha": "^6.0.0",
+    "gulp-nodemon": "^2.4.2",
     "gulp-rimraf": "^0.2.2",
     "gulp-shell": "^0.6.5",
     "gulp-tslint": "^8.1.3",
+    "http-proxy-middleware": "^0.19.1",
     "node-dev": "^3.1.3",
     "nodemon": "^1.18.9",
     "tsc": "^1.20150623.0",
