--- a/template/package.json
+++ b/template/package.json
@@ -10,6 +10,7 @@
     "build": "gulp build",
     "start": "node build/src/index.js",
     "dev": "cross-env NODE_ENV=development node build/src/index.js",
+    "cron": "node build/src/index.js -t hello -m 3 -s 2",
     "server": "gulp server",
     "server:build": "gulp server:build",
     "setup": "npm install",
