--- a/template/src/config/application.yml
+++ b/template/src/config/application.yml
@@ -2,36 +2,41 @@ node-web:
   app:
     cors: true
     assets: assets
-    port: <%= port %>
-    host: <%= host %>
+    port: 8080
+    host: localhost
     viewDir: view
     controllerDir: controller
+  cache:
+    maxCacheSize: 104857600
+    expire: 60000
   data:
-<%_ if (datasource.indexOf('mongo') >= 0) { _%>
-    mongo:
-      -
-        dao: jweb-mongo
-        bean: primary
-        url: mongodb://localhost:27017
-        poolSize: 10
-<%_ }; _%>
-<%_ if (datasource.indexOf('mysql') >= 0) { _%>
+    #mongo: // one connection
+      # url: mongodb://localhost:27017
+      #auth:
+        #  user: ''
+        #  password: ''
+    # mongo:
+    #   -
+    #     dao: jweb-mongo
+    #     bean: primary
+    #     url: mongodb://localhost:27017
+    #     poolSize: 10
+     #-
+        #url: mongodb://localhost:27017
     mysql:
       -
         dao: jweb-mysql
         bean: primary
+        master: true
         host: 127.0.0.1
         port: 3306
         user: root
-        password: ''
+        password: 123123
         database: test
-        connectionLimit: 10
-<%_ }; _%>
-<%_ if (datasource.indexOf('redis') >= 0) { _%>
-    redis:
-      -
-        dao: jweb-redis
-        bean: primary
-        host: 127.0.0.1
-        port: 6379
-<%_ }; _%>
+        connectionLimit: 20
+    # redis:
+    #   -
+    #     dao: jweb-redis
+    #     bean: primary
+    #     host: 127.0.0.1
+    #     port: 6379
